--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "discord.js": "^14.14.1",
+    "eslint": "^8.56.0",
     "openai": "^4.26.1"
   }
 }
