--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "discord.js": "^14.14.1",
     "eslint": "^8.56.0",
+    "eslint-config-google": "^0.14.0",
     "openai": "^4.26.1"
   }
 }
