--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "eslint": "^8.56.0",
     "eslint-config-google": "^0.14.0",
     "openai": "^4.26.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.1"
   }
 }
