--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "discord.js": "^14.14.1",
+    "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "eslint-config-google": "^0.14.0",
     "openai": "^4.26.1"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.1"
   }
 }
