--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "require-jsdoc":"off"
+        "require-jsdoc":"off",
+        "max-len":"off"
     }
 }
